Add purescript files